# jahs_bench_201_experiments

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
jahs_bench_201_experiments/analysis/: analysis.py  compare_runtime.py  leaderboard.py
jahs_bench_201_experiments/tasks/: run_all.sh  run_example.py  run_model_based.py  run_model_free.py  run_task.py  startup.sh
jahs_bench_201_experiments/tasks/optimizer/: random_search.py  successive_halving.py
jahs_bench_201_experiments/tasks/wrapper/: jahs_bench_wrapper.py  utils.py
jahs_bench_201_experiments/utils/: plotting.py  setup.py  styles.py  util.py
jahs_bench_201_experiments/utils/CMDs/: all_experiments.txt  generate_cmds.py
src/: correlations_across_metrics.py
src/analysis/: analysis.py  compare_runtime.py  leaderboard.py
src/tasks/: run_all.sh  run_task.py  slurm_helper.py  startup.sh
src/tasks/analysis/: analysis.py  compare_runtime.py  leaderboard.py
src/tasks/optimizer/: successive_halving.py
src/tasks/utils/: setup.py  util.py
src/tasks/utils/CMDs/: generate_cmds.py
src/tasks/wrapper/: jahs_bench_wrapper.py  utils.py
src/utils/: plotting.py  setup.py  util.py
