[tool.poetry]
name = "jahs_bench_201_experiments"
version = "1.0.0"
description = "Experiments for the JAHS-Bench-201 paper."
authors = [
    "Archit Bansal <bansala@cs.uni-freiburg.de>",
    "Danny Stoll <stolld@cs.uni-freiburg.de>",
    "Maciej Janowski <janowski@cs.uni-freiburg.de>",
    "Arber Zela <zelaa@cs.uni-freiburg.de>",
    "Frank Hutter <fh@cs.uni-freiburg.de>",
]
readme = "README.md"
license = "MIT"
packages = [
    { include = "jahs_bench_201_experiments" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<=3.10"
numpy = "~1.21.0"
pandas = "~1.3.0"
xgboost = "~1.5.0"
ConfigSpace = "~0.4.0"
joblib = "~1.1.0"
scikit-learn = "~1.0.2"
yacs = "~0.1.8"
requests = "^2.28.0"
path = "^16.4.0"
hpbandster = "^0.7.4"
torch = "^1.11.0"
botorch = "^0.6.4"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
tabulate = "^0.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"